@@ -78,13 +78,11 @@ int JackEngine::Close()
     
     // Close (possibly) remaining clients (RT is stopped)
     for (int i = 0; i < CLIENT_NUM; i++) {
-        /*
-        Can only delete clients that where loaded using "jack_internal_client_load" (and not properly unloaded using "jack_internal_client_unload"...)
-        */
-        JackLoadableInternalClient* loadable_client = dynamic_cast<JackLoadableInternalClient*>(fClientTable[i]);
-        if (loadable_client) {
-            jack_log("JackEngine::Close delete loadable client %ld", i);
-            delete loadable_client;
+        JackClientInterface* client = fClientTable[i];
+        if (client) {
+            jack_log("JackEngine::Close client = %s", client->GetClientControl()->fName);
+            client->Close();
+            delete client;
             fClientTable[i] = NULL;
         }
     }
